@@ -13,6 +13,7 @@ Bugs fixed:
 - 2935931 Indications to file:// urls never fail.
 - 2937577 Some SLP-specific code not ifdef'd
 - 2939874 Serious provider id mismatch after provider reload
+- 2655854 Common Provider invokes Init and CleanUp more than once
 
 Changes in 1.3.6
 ================
